<resources>
    <string name="app_name">AplikasiTebaranNusira</string>
    <string name="tindakan_bahaya">Temu Tindakan Bahaya</string>
    <string name="kondisi_bahaya">Temu Kondisi Bahaya</string>
    <string name="pencemaran">Temu Pencemaran</string>
    <string name="name_app">Aplikasi Tebaran</string>
    <string name="description_text">Terima kasih kami ucapkan kepada Bapak dan Ibu yang telah melaporkan  temuanya kepada kami Tim SHE. Dengan temuan ini sangat membantu kami Tim SHE yang selalu berupaya mencegah terjadinya kecelakaan kerja dilingkungan kerja.</string>
    <string name="kembali">Kembali</string>
    <string name="menu_tebaran">Menu Temu 5R</string>
    <string name="mohon_isi_inputan_dengan_benar">Mohon isi inputan data dengan benar!!</string>
    <string name="temu_5_r">Temu 5R</string>
    <string name="nama">Nama</string>
    <string name="document_memory_hp">File anda berada di Document memory hp anda</string>
    <string name="hint_name">Nama Penemu</string>
    <string name="nik">Nik</string>
    <string name="hint_nik">NIK Penemu</string>
    <string name="bagian">Bagian</string>
    <string name="hint_bagian">Bagian Penemu</string>
    <string name="cetak_pdf">Cetak PDF</string>
    <string name="kirim">Kirim</string>
    <string name="penemu">Penemu</string>
    <string name="isian_kategori">Kategori/Resiko/Dampak</string>
    <string name="isilah_kategori_atas_temuan_anda">Masukkan Kategori/Resiko/Dampak Temuan Anda</string>
    <string name="masukkan_nama_penemuan_anda">Masukkan Penjelasan Temuan Anda</string>
    <string name="temuan">Temuan</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="menu_aplikasi_tebaran">Menu Aplikasi Tebaran</string>
    <string name="go_setting">Pergi Ke Setting</string>
    <string name="permission_acccess">Permission diizinkan</string>
    <string name="gallery">Gallery</string>
    <string name="masukkan_foto_penemuan">Masukkan Foto Penemuan Anda</string>
    <string name="lokasi">Lokasi</string>
    <string name="masukan_lokasi">Masukan Lokasi Temuan Anda</string>
    <string name="mohon_isi_data_dibawah_ini_dengan_benar">Mohon Diisi Data Temuan Yang Anda Temukan Dengan Benar</string>
    <string name="gambar_content">gambar content</string>
    <string name="terimakasih">Terimakasih</string>
</resources>